@@ -9,7 +9,7 @@ import com.jjdx.xoj.model.ExecuteCodeRequest;
 import com.jjdx.xoj.model.ExecuteCodeResponse;
 import com.jjdx.xoj.model.ExecuteMessage;
 import com.jjdx.xoj.utils.JavaCodeValidator;
-import com.jjdx.xoj.utils.ProcessUtils;
+import com.jjdx.xoj.utils.JavaProcessUtil;
 import org.springframework.stereotype.Component;
 
 import java.io.File;
@@ -19,11 +19,17 @@ import java.util.List;
 
 @Component
 public abstract class JavaCodeSandboxTemplate implements CodeSandbox {
-
     static final String Temp_Code_Dir_Name = "tempCode";
     static final String Java_File_Name = "Main.java";
     public static final Long Time_Out = 5 * 1000L;
 
+    /**
+     保存代码到文件
+     文件在`Temp_Code_Dir_Name/uuid`目录下, 文件名为`Java_File_Name`
+
+     @param code
+     @return 文件对象
+     */
     public File saveCodeToFile(String code) {
         String userDir = System.getProperty("user.dir");
         String tempCodeDir = userDir + File.separator + Temp_Code_Dir_Name;
@@ -35,11 +41,18 @@ public abstract class JavaCodeSandboxTemplate implements CodeSandbox {
         return FileUtil.writeString(code, userCodePath, StandardCharsets.UTF_8);
     }
 
+    /**
+     编译Java代码
+     编译后的文件在同一目录下, 文件名为Main.class
+
+     @param userCodeFile
+     @return
+     */
     public ExecuteMessage compileFile(File userCodeFile) {
         String compileCmd = String.format("javac -encoding utf-8 %s", userCodeFile.getAbsoluteFile());
         try {
             Process complieProcess = Runtime.getRuntime().exec(compileCmd);
-            return ProcessUtils.runAndGetMessage(complieProcess);
+            return JavaProcessUtil.runAndGetMessage(complieProcess);
         } catch (Exception e) {
             ExecuteMessage executeMessage = new ExecuteMessage();
             executeMessage.setExecuteStatus(ExecuteStatus.EXITED);
@@ -49,17 +62,21 @@ public abstract class JavaCodeSandboxTemplate implements CodeSandbox {
         }
     }
 
+    /**
+     本地执行Java代码
+     */
     public List<ExecuteMessage> runFile(List<String> inputList, File userCodeFile) {
         List<ExecuteMessage> executeMessageList = new ArrayList<>();
-
+        String classPath = userCodeFile.getParentFile().getAbsolutePath();
+        String memoryCmd = "-Xmx256m";
+        String encodingCmd = "-Dfile.encoding=UTF-8";
+        String securityManagerCmd = "-Djava.security.manager -Djava.security.policy==security.policy";
+        String runCmd = "java" + " " + memoryCmd + " " + encodingCmd + " " + securityManagerCmd
+                + " " + "-cp" + " " + classPath + " " + "Main";
         for (String inputArgs : inputList) {
-            String memoryCmd = "-Xmx256m";
-            String encodingCmd = "-Dfile.encoding=UTF-8";
-            String runCmd = "java" + " " + memoryCmd + " " + encodingCmd
-                    + " " + "-cp" + " " + userCodeFile.getParentFile().getAbsolutePath() + " " + "Main";
             try {
                 Process runProcess = Runtime.getRuntime().exec(runCmd);
-                ExecuteMessage executeMessage = ProcessUtils.runInterAndGetMessage(runProcess, inputArgs);
+                ExecuteMessage executeMessage = JavaProcessUtil.runInterAndGetMessage(runProcess, inputArgs);
                 executeMessageList.add(executeMessage);// 运行成功(但是可能会出现超时超内存等问题)
             } catch (Exception e) {// 运行失败
                 ExecuteMessage executeMessage = new ExecuteMessage();
@@ -72,6 +89,12 @@ public abstract class JavaCodeSandboxTemplate implements CodeSandbox {
         return executeMessageList;
     }
 
+    /**
+     整理信息
+
+     @param executeMessageList 每个测试用例的执行情况
+     @return
+     */
     public List<ExecuteCaseInfo> organizeInformation(List<ExecuteMessage> executeMessageList) {
         List<ExecuteCaseInfo> executeCaseInfoList = new ArrayList<>();
         for (ExecuteMessage executeMessage : executeMessageList) {
@@ -85,6 +108,12 @@ public abstract class JavaCodeSandboxTemplate implements CodeSandbox {
         return executeCaseInfoList;
     }
 
+    /**
+     清理用户临时代码文件
+
+     @param userCodeFile
+     @return
+     */
     public boolean clean(File userCodeFile) {
         if (userCodeFile.getParentFile().exists()) {
             return FileUtil.del(userCodeFile.getParentFile());
@@ -123,6 +152,4 @@ public abstract class JavaCodeSandboxTemplate implements CodeSandbox {
         if (!del) System.out.println("文件清理失败");
         return executeCodeResponse;
     }
-
-
 }
